fix: fixed scrollbar pushing things around + default scrollposition on mount for all pages
#42

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -62,6 +62,11 @@ body {
   a {
     text-decoration: none;
   }
+
+  /* Stop the scrollbar from pushing elements */
+  overflow-y: scroll; /* Always show the scrollbar */
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: transparent transparent; /
 }
 
 * {
