--- a/frontend/src/styles/Matchup/MatchScorers.module.css
+++ b/frontend/src/styles/Matchup/MatchScorers.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
-  transition: height 0.5s ease-in-out;
+  transition: height 0.4s ease;
   overflow: hidden;
   width: 100%;
 }
